<package>
 <name>dumbo_ft_drift_compensation</name>
  <version>0.1.0</version>
  <description>
    Package for compensating drift of force-torque sensors on Dumbo.
  </description>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/dumbo_ft_drift_compensation</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>iir_filter</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>iir_filter</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>eigen_conversions</run_depend>

</package>